Fri Jan 27 2006  Loic Dachary  <loic@gnu.org>

	* Release 1.0.14

	* pokernetwork/pokerchildren.py (PokerRsync.configure): support rsync proxy

	* pokerclient2d/poker2d.py (PokerClientFactory2D.selectServer): use proxy aware connector

	* pokernetwork/proxy.py: transparent proxy support draft-luotonen-web-proxy-tunneling-01.txt

Tue Jan 24 2006  Loic Dachary  <loic@gnu.org>

	* pokerui/pokerinterface.py (PokerInterface.updateMenu): 
	* pokerclient2d/menu.c (handle_menu): kill display 2d/3d switch

Tue Jan 24 2006  Johan Euphrosine <johan@mekensleep.org>

	* pokerui/pokerrenderer.py: added wrap_text function instead of DummyWriter

Tue Jan 03 2006  Benoit Treins

	* pokernetwork/pokerserver.py: store the skin information in poker table
	
	* pokernetwork/pokerpackets.py(PACKET_POKER_TABLE): add the skin info

Tue Jan 03 2006  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerclient.py: store the timeout information
	
	* pokernetwork/pokerpackets.py(PACKET_POKER_TIMEOUT_WARNING): add the reference time
	
	* pokerclient2d/pokerdisplay2d.py (PokerDisplay2D.updateAction): remove shadowstack handling
	  since pokerrenderer now uses call/raise interactors

Mon Jan 02 2006  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerserver.py (PokerService.spawnTourney): provide search path
	  to PokerTournament for it to find the payout structure.

Wed Dec 28 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/protocol.py (UGAMEProtocol._handleVersion): _protocol_ok flag to handle
	  premature deconnexion while protocol is being negotiated

Tue Dec 06 2005  Johan Euphrosine  <johan@mekensleep.org>
Tue Dec 06 2005  Cedric Pinson  <cpinson@freesheep.org>

	* pokerclient2d/chat.c: added chat history handling
	* pokerui/pokerrenderer.py: added chat history handling


Tue Dec 06 2005  Johan Euphrosine  <johan@mekensleep.org>
Tue Dec 06 2005  Cedric Pinson  <cpinson@freesheep.org>
